--- a/Round2/Round2_file11.Rmd
+++ b/Round2/Round2_file11.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Round2"
+title: "Short term memory (AR(1)) with signal on unit vector"
 author: "Jonathan Rosenblatt"
 date: "8/2/2017"
 output: html_document
@@ -11,7 +11,7 @@ output: html_document
 file.name <- "file11"
 
 balance <- TRUE   # set for TRUE for balanced folding ana refolding.
-n.replications <-  1e3
+n.replications <-  1e2# 1e3
 p <- 23
 n <- 4e1 # total sample size-> n/2 in each group.
 n.permutations <- 3e2
@@ -22,31 +22,22 @@ cost.2 <- 1e-1
 source('Gilron Effect of Cross Validatino.R')
 
 ## Signal in location
-effects <- seq(0, 0.5, length=3) # change in location
+effects <- seq(0, 0.5, length=3) 
 
-
-## Signal in scale
-Sigma <- ar1_cov(n = p, rho=0.8)
+## Dependence
+Sigma <- ar1_cov(n = p, rho=0.6)
+lattice::levelplot(Sigma)
+Sigma.eigen <- eigen(Sigma, symmetric=TRUE)
+direction <- rep(1,p)
 ```
 
 
 ## Fixed folds. Cross-Validated. All in one.
 ```{r}
-# Sys.getpid()
-
 library(RhpcBLASctl)
 blas_set_num_threads(1)
-# get_num_cores()
-# get_num_procs()
-# blas_get_num_procs()
 
 registerDoMC(cores=110)
-
-# Testing parallelization:
-# foreach(i=1:60) %dopar% {
-#   eigen(matrix(rnorm(1e6), ncol = 1e3, nrow = 1e3))$values[[1]][[1]]
-# }
-# foreach(i=1:20) %:% foreach(j=1:3) %dopar% mean(rnorm(1e7))
 ```
 
 
@@ -60,8 +51,10 @@ pvals.1.9 <- foreach(j=1:n.replications, .combine=rbind) %dopar%{
     .noise <- rmvnorm(n=n, sigma = Sigma)
 
     ## Shift alternative:
-    noise <- .noise + effect * labels
-    
+    # noise <- .noise + effect * labels
+    noise <- .noise
+    noise[labels,] <- noise[labels,] + effect * direction 
+
     ## Compute observed statistic
     x1 <- noise[labels,]
     x2 <- noise[!labels,]
@@ -97,7 +90,7 @@ pvals.1.9 <- foreach(j=1:n.replications, .combine=rbind) %dopar%{
     statistics.names <- names(ts)
     
     # Initialize permuted statistics
-    permuted <- matrix(-1, ncol=length(ts), nrow=n.permutations)
+    permuted <- matrix(NA, ncol=length(ts), nrow=n.permutations)
     
     for(i in 1:n.permutations){
       # i <- 1
@@ -151,7 +144,7 @@ save.image(file=paste(file.name,".RData", sep=''))
 
 
 ```{r analyze multiple effects}
-# load("file9.RData")
+# load("file11.RData")
 err.bar <- round(3*sqrt(.05*.95/(n.replications)),3) # confidence limits of p-value
 .limits <- 0.05 + c(-err.bar,0,err.bar)
 
@@ -160,6 +153,8 @@ pvals.1.9 %<>%  as.data.table()
 names(pvals.1.9)[-1] <- c('Oracle','Hotelling','Hotelling.shrink', 'LDA.CV.1', 'LDA.CV.2', 'LDA.noCV.1', 'LDA.noCV.2',  'SD','SVM.CV.1', 'SVM.CV.2', 'SVM.CV.3',  'SVM.CV.4','SVM.noCV.1', 'SVM.noCV.2', 'SVM.noCV.3','SVM.noCV.4')
   
 pvals.melt <- melt(pvals.1.9, id.vars=c("effect"), variable.name='statistic') 
+statistic.filter <- c("SVM.CV.3","SVM.CV.4","SVM.noCV.3","SVM.noCV.4")
+pvals.melt <- pvals.melt[!(statistic %in% statistic.filter),,]
 
 pvals.melt[,c("reject","effect.factor"):=list(as.numeric(value <= 0.05), as.factor(effect)),] 
 ```
