--- a/Round2/Manuscript/permuting_accuracy.tex
+++ b/Round2/Manuscript/permuting_accuracy.tex
@@ -407,7 +407,7 @@ From the long memory setup in Figure~\ref{fig:pink_noise} we see that the Oracle
 		\centering
 		\includegraphics[width=1\linewidth]{"art/file11"}
 		\caption{TODO: Oracle looks bad. 
-			Short memory AR(1) dependence: $\Sigma_{k,l}=\rho^{|k-l|}; \rho=0.8$. } 
+			Short memory AR(1) dependence: $\Sigma_{k,l}=\rho^{|k-l|}; \rho=0.6$. } 
 		\label{fig:ar_1}
 	\end{subfigure}
 	\begin{subfigure}{.4\textwidth}
@@ -802,8 +802,7 @@ Even there are cases where location tests are suboptimal for mixture alternative
 \begin{figure}[ht]
 \centering
 	  \includegraphics[width=0.7\linewidth]{"art/file12"}
-	  \caption{TODO: verify!
-	  	\textbf{Mixture Alternatives.} $\x_i$ is distributed as in Eq.(\ref{eq:mixture_alternative}). 
+	  \caption{\textbf{Mixture Alternatives.} $\x_i$ is distributed as in Eq.(\ref{eq:mixture_alternative}). 
 	  	$\mu$ is a $p$-vector with $3/\sqrt{p}$ in all coordinates.
 	  The effect, $p$, is color and shape coded and varies over $0$ (red circle), $1/4$ (green triangle) and $1/2$ (blue square). }
 	\label{fig:golland}
@@ -836,9 +835,9 @@ and related ``data science'' communities.
 
 
 
-%\section{Acknowledgments}
-%TODO
-% isf 900/60, Jelle, Jesse B.A. Hemerik, Yakir Brechenko, Omer Shamir, Joshua Vogelstein, Gilles Blanchard, Jason 
+\section{Acknowledgments}
+JDR was supported by the ISF 900/60 research grant. 
+JDR also wishes to Jelle Goeman, Jesse B.A. Hemerik, Yakir Brechenko, Omer Shamir, Joshua Vogelstein, Gilles Blanchard, and Jason Stein for their valuable inputs. 
 
 
 
