--- a/Round2/Round2_file17.Rmd
+++ b/Round2/Round2_file17.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Signal in LOW PCs of noise"
+title: "Arbitrary Covariance. Signal in LOW PCs of noise"
 author: "Jonathan Rosenblatt"
 date: "8/2/2017"
 output: html_document
@@ -26,9 +26,7 @@ effects <- seq(0, 0.5, length=3)
 
 
 ## Covariance between features
-A <- matrix(rnorm(p^2), ncol = p, nrow = p)
-Sigma <- crossprod(A,A)
-lattice::levelplot(Sigma)
+load(file='Sigma.RData')
 Sigma.eigen <- eigen(Sigma, symmetric=TRUE)
 plot(Sigma.eigen$values, type='h')
 direction <- sqrt(p) * Sigma.eigen$vectors[,which.min(abs(Sigma.eigen$values))] 
@@ -56,7 +54,7 @@ pvals.1.9 <- foreach(j=1:n.replications, .combine=rbind) %dopar%{
 
     ## Shift alternative:
     noise <- .noise
-    noise[labels,] <- noise[labels,] + effect * sqrt(p) * direction
+    noise[labels,] <- noise[labels,] + effect * direction
     
     ## Compute observed statistic
     x1 <- noise[labels,]
