--- a/Round2/Round2_file22.Rmd
+++ b/Round2/Round2_file22.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Arbitrary covariance. Signal in HIGH PCs of noise"
+title: "Browninan covariance. signal in high PCs"
 author: "Jonathan Rosenblatt"
 date: "8/2/2017"
 output: html_document
@@ -8,10 +8,10 @@ output: html_document
 
 
 ```{r preliminaries}
-file.name <- "file18"
+file.name <- "file22"
 
 balance <- TRUE   # set for TRUE for balanced folding ana refolding.
-n.replications <-  1e2# 1e3
+n.replications <-  1e3
 p <- 23
 n <- 4e1 # total sample size-> n/2 in each group.
 n.permutations <- 3e2
@@ -22,37 +22,33 @@ cost.2 <- 1e-1
 source('Gilron Effect of Cross Validatino.R')
 
 ## Signal in location
-effects <- seq(0, 0.5, length=3) 
+effects <- seq(0, 0.5, length=3) # change in location
 
-
-## Covariance between features
-load(file='Sigma.RData')
-Sigma.eigen <- eigen(Sigma, symmetric=TRUE)
+## Covariance
+Sigma <- browninan_cov(p,0.2)
+lattice::levelplot(Sigma)
 direction <- sqrt(p) * Sigma.eigen$vectors[,which.max(abs(Sigma.eigen$values))] 
 ```
 
 
 ## Fixed folds. Cross-Validated. All in one.
 ```{r}
-# Sys.getpid()
-
 library(RhpcBLASctl)
 blas_set_num_threads(1)
 
-registerDoMC(cores=110)
+registerDoMC(cores=50)
 ```
 
 
 ```{r independent noise variable folds}
 pvals.1.9 <- foreach(j=1:n.replications, .combine=rbind) %dopar%{
   foreach(effect=effects, .combine=rbind)  %do% {
-    # effect <- effects[[3]]
-  
+    
     labels <- sample(c(rep(TRUE, n/2), rep(FALSE,n/2))) # group assignemt labels
     
     ## Gaussian noise
     .noise <- rmvnorm(n=n, sigma = Sigma)
-
+    
     ## Shift alternative:
     noise <- .noise
     noise[labels,] <- noise[labels,] + effect * direction
@@ -92,7 +88,7 @@ pvals.1.9 <- foreach(j=1:n.replications, .combine=rbind) %dopar%{
     statistics.names <- names(ts)
     
     # Initialize permuted statistics
-    permuted <- matrix(NA, ncol=length(ts), nrow=n.permutations)
+    permuted <- matrix(-1, ncol=length(ts), nrow=n.permutations)
     
     for(i in 1:n.permutations){
       # i <- 1
@@ -146,7 +142,7 @@ save.image(file=paste(file.name,".RData", sep=''))
 
 
 ```{r analyze multiple effects}
-# load("file18.RData")
+# load("file16.RData")
 err.bar <- round(3*sqrt(.05*.95/(n.replications)),3) # confidence limits of p-value
 .limits <- 0.05 + c(-err.bar,0,err.bar)
 
