--- a/Round2/Manuscript/permuting_accuracy.tex
+++ b/Round2/Manuscript/permuting_accuracy.tex
@@ -550,8 +550,8 @@ This was to be expected, since we already saw in (e.g.) Figure~\ref{fig:simulati
 		Name & Algorithm & Resampling &  Parameters\\ 
 		\hline
 		\hline
-		SVM.highdim.1 & SVM & V-fold & cost=10, V=4 \\ 
-		SVM.highdim.2 & SVM & b$0.632$ & cost=10, B=50 \\ 
+		SVM.CV.5 & SVM & V-fold & cost=100, V=4 \\ 
+		SVM.CV.6 & SVM & V-fold & cost=0.01, V=4 \\ 
 		LDA.highdim.1 & LDA & V-fold & V=4 \\ 
 		LDA.highdim.2 & LDA & V-fold & V=4 \\ 
 		LDA.highdim.3 & LDA & V-fold & V=4 \\ 
