--- a/Round2/Round2_file1.Rmd
+++ b/Round2/Round2_file1.Rmd
@@ -13,7 +13,7 @@ file.name <- "file1"
 balance <- TRUE   # set for TRUE for balanced folding ana refolding.
 n.replications <-  1e3
 p <- 23
-n <- 4e1 # total sample size-> n/2 in each group.
+n <- 4e2 # total sample size-> n/2 in each group.
 n.permutations <- 3e2
 n.folds <- 4
 cost.1 <- 1e1
@@ -23,34 +23,17 @@ source('Gilron Effect of Cross Validatino.R')
 
 ## Signal in location
 effects <- seq(0, 0.5, length=3) # change in location
-# effects <- sqrt(40/400) * seq(0, 0.5, length=3) # change in location
 
-
-## Signal in scale
 Sigma <- diag(p)
-# Sigma <- ar1_cov(p, rho=0.8)
-# Sigma <- comSym_cov(p, rho=0.7) 
-# Sigma <- diag((1:p)*p/sum(1:p))
 ```
 
 
 ## Fixed folds. Cross-Validated. All in one.
 ```{r}
-# Sys.getpid()
-
 library(RhpcBLASctl)
 blas_set_num_threads(1)
-# get_num_cores()
-# get_num_procs()
-# blas_get_num_procs()
 
 registerDoMC(cores=110)
-
-# Testing parallelization:
-# foreach(i=1:60) %dopar% {
-#   eigen(matrix(rnorm(1e6), ncol = 1e3, nrow = 1e3))$values[[1]][[1]]
-# }
-# foreach(i=1:20) %:% foreach(j=1:3) %dopar% mean(rnorm(1e7))
 ```
 
 
@@ -63,24 +46,8 @@ pvals.1.9 <- foreach(j=1:n.replications, .combine=rbind) %dopar%{
     ## Gaussian noise
     .noise <- rmvnorm(n=n, sigma = Sigma)
     
-    ## t noise
-    # .noise <- rmvt(n=n, sigma = Sigma, df=3) 
-    
     ## Shift alternative:
-    # noise <- .noise + effect * labels
-    
-    ## Scale alternative:
-    A <- diag(n) 
-    A[labels,labels] <- A[labels,labels]*(1:n)^(-effect)
-    noise <- A %*% .noise 
-    # plot(noise, col=labels+1, cex=1); abline(h=0,v=0, lty=2)
-    
-    # Golland's mixture null:
-    # .noise <- rmvnorm(n=n, sigma = Sigma) # Gaussian noise
-    # shift <- rep(sqrt(9/p), p)
-    # shift.group <- 2*rbinom(n, 1, (0.5-effect)^labels*(0.5+effect)^(1-labels))-1
-    # noise <- .noise + t(outer(shift, shift.group))
-    # plot(noise, col=labels+1, cex=1); abline(h=0,v=0, lty=2)
+    noise <- .noise + effect * labels
     
     ## Compute observed statistic
     x1 <- noise[labels,]
@@ -117,7 +84,7 @@ pvals.1.9 <- foreach(j=1:n.replications, .combine=rbind) %dopar%{
     statistics.names <- names(ts)
     
     # Initialize permuted statistics
-    permuted <- matrix(-1, ncol=length(ts), nrow=n.permutations)
+    permuted <- matrix(NA, ncol=length(ts), nrow=n.permutations)
     
     for(i in 1:n.permutations){
       # i <- 1
@@ -126,13 +93,6 @@ pvals.1.9 <- foreach(j=1:n.replications, .combine=rbind) %dopar%{
       fold.ids <- balanced_folding(labels, n.folds, balance) # refold
       x1 <- noise[labels,]
       x2 <- noise[!labels,]
-      
-      # Checking balance:
-      # capture.output(table(.fold.ids, .labels), file=balanc.log, append = TRUE)
-      
-      # for permuting Xs:
-      # .indexes <- sample(seq(n))
-      #  .noise <- noise[.indexes,] 
       
       permuted[i,] <- c(
         Oracle=t_Oracle(x1, x2, Sigma, Sigma),
@@ -165,7 +125,7 @@ pvals.1.9 <- foreach(j=1:n.replications, .combine=rbind) %dopar%{
 } 
   
 pbPost(type = "note", body = "Done", the.message)
-# save.image(file=paste(file.name,".RData", sep=''))
+save.image(file=paste(file.name,".RData", sep=''))
 ```
 
 
@@ -180,7 +140,6 @@ pvals.1.9 %<>%  as.data.table()
 names(pvals.1.9)[-1] <- c('Oracle','Hotelling','Hotelling.shrink', 'LDA.CV.1', 'LDA.CV.2', 'LDA.noCV.1', 'LDA.noCV.2',  'SD','SVM.CV.1', 'SVM.CV.2', 'SVM.CV.3',  'SVM.CV.4','SVM.noCV.1', 'SVM.noCV.2', 'SVM.noCV.3','SVM.noCV.4')
   
 pvals.melt <- melt(pvals.1.9, id.vars=c("effect"), variable.name='statistic') 
-
 statistic.filter <- c("SVM.CV.3","SVM.CV.4","SVM.noCV.3","SVM.noCV.4")
 pvals.melt <- pvals.melt[!(statistic %in% statistic.filter),,]
 
